--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:padding="10dp"
     android:background="@color/white"
-    tools:context=".Authentication.LoginActivity">
+    tools:context=".authentication.LoginActivity">
 
 
     <TextView
