--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            app:boxBackgroundColor="@color/white"
             android:textColorHint="@color/grey"
             app:boxBackgroundMode="outline"
             app:boxCornerRadiusBottomEnd="10dp"
@@ -55,6 +56,7 @@
             android:textColorHint="@color/grey"
             app:boxBackgroundMode="outline"
             app:boxCornerRadiusBottomEnd="10dp"
+            app:boxBackgroundColor="@color/white"
             app:boxCornerRadiusBottomStart="10dp"
             app:boxCornerRadiusTopEnd="10dp"
             app:boxCornerRadiusTopStart="10dp"
@@ -75,20 +77,18 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-            android:id="@+id/sign_in"
-            android:layout_width="150dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:background="@drawable/curv_rect_back"
-            android:drawableEnd="@drawable/keyboard_arrow_right"
-            android:onClick="login_clicked"
-            android:padding="10dp"
-            android:text="Sign in"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+    <Button
+        android:id="@+id/sign_in"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="login_clicked"
+        android:padding="10dp"
+        android:paddingStart="20dp"
+        android:text="Sign in"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+        app:icon="@drawable/keyboard_arrow_right"
+        app:iconGravity="end" />
 
         <RelativeLayout
             android:layout_width="match_parent"
