--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -172,7 +172,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="Nearby Health Centres"
+                        android:text="Nearby Health Services"
                         android:textColor="@color/light_black"
                         android:textSize="15sp"
                         android:textStyle="bold" />
