--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -7,7 +7,7 @@
     tools:context=".MapsActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbar_map"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/MEDIUMSEAGREEN"
@@ -20,7 +20,7 @@
 
     <fragment
         android:id="@+id/map"
-        android:layout_below="@+id/toolbar"
+        android:layout_below="@+id/toolbar_map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
