--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,7 +70,8 @@
                 android:drawableStart="@drawable/lock"
                 android:drawablePadding="10dp"
                 android:hint="Password"
-                android:inputType="numberPassword"
+                android:inputType="textPassword"
+                android:maxLength="10"
                 android:padding="15dp"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
