--- a/bmi/src/main/res/values/styles.xml
+++ b/bmi/src/main/res/values/styles.xml
@@ -8,9 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="CustomChipChoice" parent="@style/Widget.MaterialComponents.Chip.Choice">
-        <item name="chipBackgroundColor">@drawable/background_color_chip_state_list</item>
-        <item name="android:textColor">@drawable/text_color_chip_state_list</item>
+    <style name="CustomChipChoiceBMI" parent="@style/Widget.MaterialComponents.Chip.Choice">
+        <item name="chipBackgroundColor">@drawable/background_color_chip_state_bmi</item>
+        <item name="android:textColor">@drawable/text_color_chip_state_bmi</item>
         <item name="chipStartPadding">40dp</item>
         <item name="chipEndPadding">40dp</item>
     </style>
