--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,21 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp">
-
-            <RelativeLayout
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_gravity="center"
-                android:layout_margin="5dp">
+        <RelativeLayout
+            android:id="@+id/photo"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_margin="20dp">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/setting_image"
@@ -34,71 +28,79 @@
                     android:indeterminate="true"
                     android:visibility="invisible" />
 
-            </RelativeLayout>
+        </RelativeLayout>
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:orientation="vertical">
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/setting_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_toEndOf="@+id/photo"
+            android:text="CodRed"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/setting_username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="CodRed"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/verification"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_toEndOf="@+id/setting_username"
+            android:src="@drawable/verified" />
 
-                <ImageView
-                    android:id="@+id/verification"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/setting_username"
-                    android:src="@drawable/verified" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/setting_email"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/setting_username"
-                    android:text="codred@gmail.com"
-                    android:textColor="@color/grey"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-
-            </RelativeLayout>
-
-        </LinearLayout>
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/setting_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/setting_username"
+            android:layout_toEndOf="@+id/photo"
+            android:text="codred@gmail.com"
+            android:textColor="@color/grey"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
         <View
+            android:id="@+id/view"
+            android:layout_below="@id/photo"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:background="@color/indianred"/>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/acc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/view"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:text="Account"
+            android:textColor="@color/indianred"
+            android:textSize="20sp"
+            android:textStyle="bold" />
         
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_below="@id/acc"
             android:id="@+id/recycle_settings"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="10dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:background="@color/white"/>
 
         <com.google.android.material.textview.MaterialTextView
+            android:layout_below="@id/recycle_settings"
+            android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="200dp"
             android:text="From CodRed"
-            android:layout_margin="20dp"
             android:textSize="15sp"
             android:textColor="@color/indianred"
-            android:layout_gravity="center"
             android:textStyle="bold"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </androidx.core.widget.NestedScrollView>
