--- a/bmi/src/main/res/layout/activity_bmi.xml
+++ b/bmi/src/main/res/layout/activity_bmi.xml
@@ -174,7 +174,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
-            android:text="The BMI Tables"
+            android:text="The BMI Values"
             android:textColor="@color/light_violet"
             android:textSize="20sp"
             android:textStyle="bold" />
