--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/app_back"
     tools:context=".authentication.CreateAccountActivity">
 
     <RelativeLayout
@@ -11,7 +12,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:padding="10dp"
-        android:background="@color/white">
+        android:background="@android:color/transparent">
 
         <TextView
             android:id="@+id/its_easy"
