--- a/app/src/main/res/layout/activity_new_profile.xml
+++ b/app/src/main/res/layout/activity_new_profile.xml
@@ -10,23 +10,69 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:background="@color/white"
+        android:background="@android:color/transparent"
         android:padding="12dp">
+
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:text="Edit Profile"
+            android:textColor="@color/indianred"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:onClick="cancelupdate_clicked"
+            app:cardBackgroundColor="@color/indianred"
+            app:cardCornerRadius="10dp">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@drawable/keyboard_arrow_left" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/up"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:layout_alignParentEnd="true"
+            android:onClick="update_profile_clicked"
+            app:cardBackgroundColor="@color/indianred"
+            app:cardCornerRadius="10dp">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@drawable/done" />
+
+        </androidx.cardview.widget.CardView>
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/new_image_view"
+            android:layout_below="@id/up"
             android:layout_width="100dp"
-            android:layout_height="100dp"
             android:layout_centerHorizontal="true"
+            android:layout_height="100dp"
+            android:layout_margin="30dp"
             android:onClick="choose_profile_img"
             android:src="@drawable/blankprofile_round" />
 
         <ProgressBar
             android:id="@+id/update_progress"
             android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_below="@id/up"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="65dp"
+            android:layout_marginTop="70dp"
             android:indeterminate="true"
             android:indeterminateTint="@color/indianred"
             android:visibility="invisible" />
@@ -36,8 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/new_image_view"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginStart="10dp"
             android:drawableEnd="@drawable/verified"
             android:drawablePadding="5dp"
             android:text="Verified User"
@@ -49,37 +94,23 @@
             android:id="@+id/line1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_below="@+id/verified_user"
             android:orientation="horizontal">
 
-            <com.google.android.material.textfield.TextInputLayout
+            <EditText
                 android:id="@+id/user_enter"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
+                android:hint="Username"
+                android:inputType="text"
+                android:maxLength="10"
+                android:paddingStart="10dp"
+                android:textColor="@color/black"
                 android:textColorHint="@color/grey"
-                app:boxBackgroundColor="@color/white"
-                app:boxBackgroundMode="outline"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp"
-                app:boxStrokeColor="@color/indianred"
-                app:errorEnabled="true">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/new_person_icon"
-                    android:drawablePadding="10dp"
-                    android:hint="Username"
-                    android:inputType="text"
-                    android:maxLength="10"
-                    android:padding="15dp"
-                    android:textColor="@color/black"
-                    android:textSize="15sp" />
-
-            </com.google.android.material.textfield.TextInputLayout>
+                android:textSize="18sp" />
 
             <androidx.appcompat.widget.AppCompatSpinner
                 android:id="@+id/spinner_gender"
@@ -96,38 +127,23 @@
             android:id="@+id/line2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_below="@+id/line1"
             android:orientation="horizontal">
 
-            <com.google.android.material.textfield.TextInputLayout
+            <EditText
                 android:id="@+id/user_phone"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
+                android:hint="Phone Number"
+                android:inputType="phone"
                 android:textColorHint="@color/grey"
-                app:boxBackgroundColor="@color/white"
-                app:boxBackgroundMode="outline"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp"
-                app:boxStrokeColor="@color/indianred"
-                app:errorEnabled="true">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/call_icon"
-                    android:drawablePadding="10dp"
-                    android:drawableTint="@color/indianred"
-                    android:hint="Phone Number"
-                    android:inputType="phone"
-                    android:maxLength="10"
-                    android:padding="15dp"
-                    android:textColor="@color/black"
-                    android:textSize="15sp" />
-
-            </com.google.android.material.textfield.TextInputLayout>
+                android:maxLength="10"
+                android:paddingStart="10dp"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
 
             <androidx.appcompat.widget.AppCompatSpinner
                 android:id="@+id/spinner_bldgrp"
@@ -144,38 +160,23 @@
             android:id="@+id/line3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_below="@+id/line2"
             android:orientation="horizontal">
 
-            <com.google.android.material.textfield.TextInputLayout
+            <EditText
                 android:id="@+id/user_emrg_phone"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
+                android:hint="Emergency Phone No"
+                android:inputType="phone"
                 android:textColorHint="@color/grey"
-                app:boxBackgroundColor="@color/white"
-                app:boxBackgroundMode="outline"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp"
-                app:boxStrokeColor="@color/indianred"
-                app:errorEnabled="true">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/call_icon"
-                    android:drawablePadding="10dp"
-                    android:drawableTint="@color/indianred"
-                    android:hint="Emergency Phone No"
-                    android:inputType="phone"
-                    android:maxLength="10"
-                    android:padding="15dp"
-                    android:textColor="@color/black"
-                    android:textSize="15sp" />
-
-            </com.google.android.material.textfield.TextInputLayout>
+                android:maxLength="10"
+                android:paddingStart="10dp"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/date_select"
@@ -192,54 +193,38 @@
 
         </LinearLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
+        <EditText
             android:id="@+id/user_desp"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="100dp"
             android:layout_below="@+id/line3"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/card_back"
+            android:gravity="top|start"
+            android:hint="Description about Previous Medical History"
+            android:inputType="textMultiLine|text"
+            android:maxLength="300"
+            android:maxLines="10"
+            android:padding="10dp"
+            android:scrollbars="vertical"
+            android:textColor="@color/black"
             android:textColorHint="@color/grey"
-            app:boxBackgroundColor="@color/white"
-            app:boxBackgroundMode="outline"
-            app:boxCornerRadiusBottomEnd="10dp"
-            app:boxCornerRadiusBottomStart="10dp"
-            app:boxCornerRadiusTopEnd="10dp"
-            app:boxCornerRadiusTopStart="10dp"
-            app:boxStrokeColor="@color/indianred">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="Description about Previous Medical History"
-                android:inputType="textMultiLine|text"
-                android:maxLength="200"
-                android:padding="15dp"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            android:textSize="16sp" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/user_desp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="20dp"
-            android:onClick="cancelupdate_clicked"
-            android:padding="10dp"
-            android:text="Cancel"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="80dp"
+            android:paddingStart="40dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="40dp"
+            android:paddingBottom="10dp"
+            android:text="Save changes"
             android:textAllCaps="false"
-            android:textSize="20sp" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/user_desp"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="20dp"
             android:onClick="update_profile_clicked"
-            android:padding="10dp"
-            android:text="Update Profile"
-            android:textAllCaps="false"
             android:textSize="20sp" />
 
     </RelativeLayout>
