--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,7 @@
             android:id="@+id/image_slide"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:src="@drawable/doctor_interaction" />
 
         <LinearLayout
@@ -47,7 +47,7 @@
                         android:layout_width="64dp"
                         android:layout_height="64dp"
                         android:background="@drawable/circle_back"
-                        android:backgroundTint="@color/yellow"
+                        android:backgroundTint="@color/blue"
                         android:padding="15dp"
                         android:src="@drawable/device_test" />
 
@@ -56,7 +56,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:text="Take Personal Checkup"
-                        android:textColor="@color/yellow"
+                        android:textColor="@color/blue"
                         android:textSize="15sp"
                         android:textStyle="bold" />
 
@@ -64,7 +64,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="2dp"
                         android:layout_margin="10dp"
-                        android:background="@color/yellow" />
+                        android:background="@color/blue" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -217,7 +217,7 @@
                         android:layout_width="64dp"
                         android:layout_height="64dp"
                         android:background="@drawable/circle_back"
-                        android:backgroundTint="@color/blue"
+                        android:backgroundTint="@color/violet"
                         android:padding="15dp"
                         android:src="@drawable/clock_icon" />
 
@@ -226,7 +226,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:text="Medicine Reminder"
-                        android:textColor="@color/blue"
+                        android:textColor="@color/violet"
                         android:textSize="15sp"
                         android:textStyle="bold" />
 
@@ -234,7 +234,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="2dp"
                         android:layout_margin="10dp"
-                        android:background="@color/blue" />
+                        android:background="@color/violet" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -251,6 +251,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/set3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/set2"
@@ -333,7 +334,7 @@
                         android:layout_width="64dp"
                         android:layout_height="64dp"
                         android:background="@drawable/circle_back"
-                        android:backgroundTint="@color/violet"
+                        android:backgroundTint="@color/yellow"
                         android:padding="15dp"
                         android:src="@drawable/bmi" />
 
@@ -342,7 +343,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:text="BMI Calculator"
-                        android:textColor="@color/violet"
+                        android:textColor="@color/yellow"
                         android:textSize="15sp"
                         android:textStyle="bold" />
 
@@ -350,13 +351,128 @@
                         android:layout_width="match_parent"
                         android:layout_height="2dp"
                         android:layout_margin="10dp"
-                        android:background="@color/violet" />
+                        android:background="@color/yellow" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text="Check for Malnutrition"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="10sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/set3"
+            android:clipToPadding="false"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/reports"
+                android:layout_width="0dp"
+                android:layout_height="180dp"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardElevation="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/card_back"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:background="@drawable/circle_back"
+                        android:backgroundTint="@color/blue"
+                        android:src="@drawable/ic_medical_report" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Medical Report"
+                        android:textColor="#CF861B"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:layout_margin="10dp"
+                        android:background="#CF861B" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Check Your Report"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="10sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/chatbot"
+                android:layout_width="0dp"
+                android:layout_height="180dp"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardElevation="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/card_back"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:background="@drawable/ic_doc"
+                        android:backgroundTint="@android:color/holo_blue_dark"
+                        android:padding="15dp"
+                        android:src="@drawable/call_icon" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="COVID ChatBot"
+                        android:textColor="@android:color/holo_blue_dark"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:layout_margin="10dp"
+                        android:background="@android:color/holo_blue_dark" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Talk with Chat Bot regarding COVID-19"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="10sp"
                         android:textStyle="bold" />
