--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -127,6 +127,7 @@
             android:onClick="signup_clicked"
             android:padding="10dp"
             android:paddingStart="20dp"
+            android:paddingEnd="10dp"
             android:text="Register"
             android:textAllCaps="false"
             android:textSize="20sp"
