--- a/app/src/main/res/layout/activity_new_profile.xml
+++ b/app/src/main/res/layout/activity_new_profile.xml
@@ -108,6 +108,7 @@
                 android:inputType="text"
                 android:maxLength="10"
                 android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:textColor="@color/black"
                 android:textColorHint="@color/grey"
                 android:textSize="18sp" />
@@ -142,6 +143,7 @@
                 android:textColorHint="@color/grey"
                 android:maxLength="10"
                 android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
@@ -175,6 +177,7 @@
                 android:textColorHint="@color/grey"
                 android:maxLength="10"
                 android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
