--- a/doc/src/main/res/layout/fragment_all_users.xml
+++ b/doc/src/main/res/layout/fragment_all_users.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".chatFragments.AppointmentsFragment">
+    tools:context=".chatFragments.AllUsersFragment"
+    android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/user_recycler_view"
