--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,8 +8,8 @@
         android:title="Home" />
     <item
         android:id="@+id/bottom_notification"
-        android:icon="@drawable/notifications_icon"
-        android:title="Notification" />
+        android:icon="@drawable/news"
+        android:title="News" />
 
     <item
         android:id="@+id/bottom_settings"
